# CBB_Libs

./: Classes.md  LICENSE  Naming.md  README.md  Scoping.md
BioSequence/: BioAlphabet.cpp  BioAlphabet.h  BioSequenceTest.cpp  BioSequences.h  CMakeLists.txt  GSA.cpp  GSA.h  IntervalArray.cpp  IntervalArray.h  LoadSequence.cpp  Loader.cpp  Loader.h  ManaCommon.h  README.md  SFA.cpp  SFA.h  SFABuild.cpp  SFABuild.h  SeqRepresentation.h  Sequence.h  UtilFunc.h  divsufsort_private.h  main.cpp  main_test.cpp  t  t2.fa
BioSequence/BioModule_Documentation/: Alpha.md  BioAlphabet.md  BioSequence.md  File.md  GSA.md  IntervalArray.md  Loader.md  ManaCommon.md  SFABuild.md  UtilFunction.md
BioSequence/data/: q2.fa  t2.fa  testq.fa  testr.fa
BioSequence/src/: VATMain.cpp
BioSequence/src/alignment/: Align.h  AlignQueries.h  AlignQuery.h  AlignQueryBufferList.h  AlignRead.h  AlignSeq.h  Collision.h  ConnectSegment.h  CreateAlignQueries.h  FilterHit.h  JoinRange.h  VATSearch.h  XdropUngapped.h
BioSequence/src/dp/: BufferTools.h  DPMatrix.h  FloatingSmithWaterman.h  ScalarDPMatrix.h  ScalarTraceback.h  ScoreProfile.h  ScoreVector.h  SmithWaterman.h
BioSequence/src/index/: SeedCluster.h  SortedList.h
BioSequence/src/makedb/: DBMaker.h
BioSequence/src/output/: BlockOutput.h  MatchFunction.cpp  MatchFunction.h  Show.h  VATFile.h  VATJoinBlock.h  VATOutBuffer.cpp  VATOutBuffer.h  VATOutputForm.h  VATRecord.h  VATWriter.h
BioSequence/src/paras/: BlastScore.h  ConstParameter.cpp  ConstParameter.h  EditTranscript.h  Match.cpp  Match.h  NuclMatrix.cpp  NuclMatrix.h  Options.h  (+20 more)
(+149 files in other folders)
